--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,7 +107,7 @@ import Cards from "../components/Cards.astro";
 			<div id="moduloOpcion1" class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-yellow-300 justify-center items-center">
 				ESTO ES VALIDO PARA UN NUEVO CASE Y SU PROTECTOR DE PANTALLA
 			</div>
-			<div id="moduloOpcion2" class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-rose-300 justify-center items-center">CENA ESPECIAL SORPRESA</div>
+			<div id="moduloOpcion2" class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-rose-400 justify-center items-center">CENA ESPECIAL SORPRESA</div>
 			<div id="moduloOpcion3" class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-blue-300 justify-center items-center">REGALO	MISTERIOSO</div>
 
 		<div
@@ -123,13 +123,13 @@ import Cards from "../components/Cards.astro";
 				SIGUIENTE
 			</button>
 		</div>
-		<div  id="volverInicio" class="hidden flex-wrap-reverse justify-around w-[90%]">
+		<div  id="volverInicio" class="hidden flex-wrap-reverse justify-around w-[90%] gap-4">
 			<button class="bg-rose-400 text-xl text-rose-200 font-black rounded-lg p-2">
 				<a href="/">VOLVER AL INICIO</a>
 			</button>
 			<button class="bg-rose-400 text-2xl text-white font-black rounded-lg p-2">
 				<a href="/Carta">
-					------- 💌 -------
+					--- 💌 TOCA AQUI!! ---
 				</a>
 			</button>
 		</div>
