--- a/src/pages/Carta.astro
+++ b/src/pages/Carta.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro'
 ---
 <Layout>
     <main class="w-[100%] h-[100vh] grid place-items-center">
+		<audio src="/Ali.mp3" autoplay></audio>
+
         <img
 			id="corazones"
 			class="absolute -z-20 h-full w-full object-cover opacity-50"
