--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Cards from "../components/Cards.astro";
 
 <Layout>
 	<main class="w-full h-full grid place-items-center">
-		<audio src="/Ali.mp3" autoplay></audio>o
+		<audio src="/Ali.mp3" autoplay></audio>
 		<img
 			id="corazones"
 			class="absolute -z-20 h-full w-full object-cover opacity-50"
