--- a/src/pages/Carta.astro
+++ b/src/pages/Carta.astro
@@ -18,7 +18,7 @@ import Layout from '../layouts/Layout.astro'
             <p class="text-center text-xl font-semibold m-6">
                 <strong>Mi Princesa</strong>
                 <br>
-                Me encantaría invitarte a una cena especial esta noche pasaré por ti a tu ofi a las 6:30. Quiero disfrutar de una velada juntos y hacerte sentir lo especial que eres para mí.
+                Me encantaría invitarte a una cena especial esta noche pasaré por ti a tu casa a las 7:30. Quiero disfrutar de una velada juntos y hacerte sentir lo especial que eres para mí.
     
             </p>
             <h3 class="text-3xl font-black m-6">
