--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,18 +6,38 @@ import Cards from "../components/Cards.astro";
 <Layout>
 	<main class="w-full h-full grid place-items-center">
 		<audio src="/Ali.mp3" autoplay></audio>
+		<div id="container" class="grid place-items-center h-[100vh]">
+			<div id="error" class="text-white font-black text-4xl">
+				ERROR AL CARGAR LA PAGINA
+			</div>
+			<div id="cargando" class="hidden text-white font-black text-4xl">
+				CARGANDO...
+			</div>
+			<div id="listo" class="hidden text-white font-black text-4xl">
+				ESTA PÁGINA FUE CREADA PARA TÍ...
+				<br />
+				sigue todas las instrucciones
+			</div>
+			<button
+				id="empezar"
+				class="hidden
+			<button text-4xl p-2 rounded-lg bg-rose-500 w-[400px]>"
+			>
+				EMPEZAR
+			</button>
+		</div>
 		<img
 			id="corazones"
 			class="absolute -z-20 h-full w-full object-cover opacity-50"
 			src="/fondoCorazon.png"
 			alt="fondo corazon"
 		/>
-		<div class="flex justify-center items-center">
+		<div id="titulo"  class=" hidden flex justify-center items-center">
 			<h1 class="text-center text-4xl font-bold text-red-100">
 				PARA MI PRINCESA GABY
 			</h1>
 		</div>
-		<div id="principal" class="flex justify-center items-center flex-wrap">
+		<div id="principal" class="hidden flex justify-center items-center flex-wrap">
 			<img
 				class="w-[300px] h-[400px] rounded-3xl object-cover m-4"
 				src="/fotos/imgprin.jpeg"
@@ -50,7 +70,7 @@ import Cards from "../components/Cards.astro";
 		<div
 			class="tequiero w-[90%] hidden grid rounded-3xl place-items-center gap-3"
 		>
-			<div class="bg-[#29072b83] relative rounded-xl">
+			<div class="bg-[#da097c7c] relative rounded-xl">
 				<img
 					class="w-full h-full absolute -z-10 object-cover opacity-60 rounded-3xl"
 					src="/fotos/imagFondo.jpeg"
@@ -63,15 +83,16 @@ import Cards from "../components/Cards.astro";
 					eres la persona que siempre tengo en mi mente a cada minuto.
 					Por la cual me arriesgué a decirle todo lo que sentía y no
 					me importó nada de nada. Eres tú la persona por quien mi
-					corazón late todos los días. Eres tú mi primer pensamiento
-					al despertar. siempre me pregunto que estás haciendo, en
-					dónde estarás.... Eres tú la persona por la que me muero de
-					celos si te miran o te dicen cosas. La persona por la que
-					seguiría a pesar de todo eres tú. No me importa nada, no te
-					cambiaría por nada ni por nadie
+					corazón late todos los días y me haces ser una mejor persona
+					. Eres tú mi primer pensamiento al despertar. siempre me
+					pregunto que estás haciendo, en dónde estarás.... Eres tú la
+					persona por la que me muero de celos si te miran o te dicen
+					cosas. La persona por la que seguiría a pesar de todo eres
+					tú. No me importa nada, no te cambiaría por nada ni por
+					nadie
 				</p>
 			</div>
-			<div class="bg-[#c741ce83] relative rounded-xl">
+			<div class="bg-[#9c11347c] relative rounded-xl">
 				<img
 					class="w-full h-full absolute -z-10 object-cover opacity-60 rounded-3xl"
 					src="/fotos/SunsetBives.jpeg"
@@ -95,21 +116,40 @@ import Cards from "../components/Cards.astro";
 				Elije una opción
 			</h2>
 			<div class="grid place-items-center gap-5 text-white font-black">
-				<button id="opcion1" class="text-4xl p-2 rounded-lg bg-rose-500 w-[400px]"
+				<button
+					id="opcion1"
+					class="text-4xl p-2 rounded-lg bg-rose-500 w-[400px]"
 					>OPCIÓN 1</button
-				><button id="opcion2" class="text-4xl p-2 rounded-lg bg-rose-500 w-[400px]"
+				><button
+					id="opcion2"
+					class="text-4xl p-2 rounded-lg bg-rose-500 w-[400px]"
 					>OPCIÓN 2</button
-				><button id="opcion3" class="text-4xl p-2 rounded-lg bg-rose-500 w-[400px]"
+				><button
+					id="opcion3"
+					class="text-4xl p-2 rounded-lg bg-rose-500 w-[400px]"
 					>OPCIÓN 3</button
 				>
 			</div>
 		</div>
 
-			<div id="moduloOpcion1" class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-yellow-300 justify-center items-center">
-				ESTO ES VALIDO PARA UN NUEVO CASE Y SU PROTECTOR DE PANTALLA
-			</div>
-			<div id="moduloOpcion2" class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-rose-400 justify-center items-center">CENA ESPECIAL SORPRESA</div>
-			<div id="moduloOpcion3" class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-blue-300 justify-center items-center">REGALO	MISTERIOSO</div>
+		<div
+			id="moduloOpcion1"
+			class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-yellow-300 justify-center items-center"
+		>
+			ESTO ES VALIDO PARA UN NUEVO CASE Y SU PROTECTOR DE PANTALLA
+		</div>
+		<div
+			id="moduloOpcion2"
+			class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-rose-400 justify-center items-center"
+		>
+			CENA ESPECIAL SORPRESA
+		</div>
+		<div
+			id="moduloOpcion3"
+			class="hidden text-3xl font-black text-white p-6 w-[70%] h-[200px] rounded-xl bg-blue-300 justify-center items-center"
+		>
+			REGALO MISTERIOSO
+		</div>
 
 		<div
 			class="flex justify-around items-center w-full font-semibold flex-wrap"
@@ -124,14 +164,19 @@ import Cards from "../components/Cards.astro";
 				SIGUIENTE
 			</button>
 		</div>
-		<div  id="volverInicio" class="hidden flex-wrap-reverse justify-around w-[90%] gap-4">
-			<button class="bg-rose-400 text-xl text-rose-200 font-black rounded-lg p-2">
+		<div
+			id="volverInicio"
+			class="hidden flex-wrap-reverse justify-around w-[90%] gap-4"
+		>
+			<button
+				class="bg-rose-400 text-xl text-rose-200 font-black rounded-lg p-2"
+			>
 				<a href="/">VOLVER AL INICIO</a>
 			</button>
-			<button class="bg-rose-400 text-2xl text-white font-black rounded-lg p-2">
-				<a href="/Carta">
-					--- 💌 TOCA AQUI!! ---
-				</a>
+			<button
+				class="bg-rose-400 text-2xl text-white font-black rounded-lg p-2"
+			>
+				<a href="/Carta"> --- 💌 TOCA AQUI!! --- </a>
 			</button>
 		</div>
 	</main>
@@ -140,14 +185,36 @@ import Cards from "../components/Cards.astro";
 	#corazones {
 		animation: 6s alternate animationPrincC;
 	}
-	#principal > h1 {
-		animation: 1s alternate animationPrinc;
+	h1 {
+		animation: 3s alternate animationPrinc;
 	}
 	#principal > img {
 		animation: 5s alternate animationPrinc;
 	}
 	.CardsAparece {
 		animation: 2.2s alternate animationPrinc;
+	}
+	#empezar {
+		animation: 2.2s infinite alternate blop;
+	}
+	@keyframes blop {
+		0% {
+			transform: scale(0.9);
+		}
+		50% {
+			transform: scale(1);
+		}
+		100% {
+			transform: scale(0.9);
+		}
+	}
+	@keyframes aparecerError {
+		from {
+			display: block;
+		}
+		to {
+			display: hidden;
+		}
 	}
 	@keyframes animationPrincC {
 		from {
@@ -182,128 +249,156 @@ import Cards from "../components/Cards.astro";
 	const quieres = document.getElementById("quieres");
 	const tequiero = document.querySelector(".tequiero");
 	const opciones = document.getElementById("opciones");
-	const opcion1 = document.getElementById('opcion1')
-	const opcion2 = document.getElementById('opcion2')
-	const opcion3 = document.getElementById('opcion3')
-	const volverInicio = document.getElementById('volverInicio')
-	const modulOpcion1 = document.getElementById('moduloOpcion1')
-	const modulOpcion2 = document.getElementById('moduloOpcion2')
-	const modulOpcion3 = document.getElementById('moduloOpcion3')
+	const opcion1 = document.getElementById("opcion1");
+	const opcion2 = document.getElementById("opcion2");
+	const opcion3 = document.getElementById("opcion3");
+	const volverInicio = document.getElementById("volverInicio");
+	const modulOpcion1 = document.getElementById("moduloOpcion1");
+	const modulOpcion2 = document.getElementById("moduloOpcion2");
+	const modulOpcion3 = document.getElementById("moduloOpcion3");
+	const error = document.getElementById("error");
+	const cargando = document.getElementById("cargando");
+	const listo = document.getElementById("listo");
+	const empezar = document.getElementById("empezar");
+	const titulo=document.getElementById('titulo')
 
+
+	const container = document.getElementById('container')
 	setTimeout(() => {
-		principal.classList.add("hidden");
-		cards[0].classList.remove("hidden");
-		cards[0].classList.add("flex");
-		siguiente.classList.remove("hidden");
-	}, 5600);
+		error.classList.add("hidden");
+	}, 2000);
 	setTimeout(() => {
-		principal.style.animation = "1s alternate animationDesv";
-	}, 5000);
-	let i = 0;
-	siguiente.addEventListener("click", () => {
-		if (i === 0) {
-			i++;
-		console.log('primero = ',i);
+		cargando.classList.remove("hidden");
+	}, 3000);
+	setTimeout(() => {
+		cargando.classList.add("hidden");
+		listo.classList.remove("hidden");
+		empezar.classList.remove("hidden");
+	}, 4000);
 
-			anterior.classList.remove("hidden");
-			cards[i - 1].classList.remove("flex");
-			cards[i - 1].classList.add("hidden");
-			cards[i].classList.remove("hidden");
-			cards[i].classList.add("flex");
-			cards[i].classList.add("CardsAparece");
-			return;
-		}
+	empezar.addEventListener("click", () => {
+		
+		titulo.classList.remove('hidden')
+		principal.classList.remove('hidden')
 
-		if (i !== 0 && i < 9) {
-			i++;
-		console.log('continuacion = ',i);
 
-			cards[i - 1].classList.remove("flex");
-			cards[i - 1].classList.add("hidden");
-			cards[i].classList.remove("hidden");
-			cards[i].classList.add("flex");
-			cards[i].classList.add("CardsAparece");
-		}
-		if (i === 8) {
-			siguiente.classList.add("hidden");
-			quieres.classList.remove("hidden");
-		}
-		if (i === 9) {
-			i++
-			console.log(i)
-			opciones.classList.remove("hidden");
-			opciones.classList.add("grid");
-			tequiero.classList.add("hidden");
-			
 
-		siguiente.classList.add("hidden");
-		anterior.classList.add('hidden')
-		}
-	});
-	anterior.addEventListener("click", () => {
-		if (i > 0 && i<=10) {
-			i = i - 1;
-		console.log('anterior =',i)
-			cards[i + 1].classList.remove("flex");
-			cards[i + 1].classList.add("hidden");
-			cards[i].classList.remove("hidden");
-			cards[i].classList.add("flex");
-			cards[i].classList.add("CardsAparece");
-			for (let index = 0; index < quieres.classList.length; index++) {
-				const element = quieres.classList[index];
-				if (element === "flex") {
-				}
-			}
+		listo.classList.add("hidden");
+		empezar.classList.add("hidden");
+		container.classList.add('hidden')
+		setTimeout(() => {
+			principal.classList.add("hidden");
+			cards[0].classList.remove("hidden");
+			cards[0].classList.add("flex");
+			siguiente.classList.remove("hidden");
+		}, 5600);
+		setTimeout(() => {
+			principal.style.animation = "1s alternate animationDesv";
+		}, 5000);
+		let i = 0;
+		siguiente.addEventListener("click", () => {
 			if (i === 0) {
-				anterior.classList.add("hidden");
+				i++;
+				console.log("primero = ", i);
+
+				anterior.classList.remove("hidden");
+				cards[i - 1].classList.remove("flex");
+				cards[i - 1].classList.add("hidden");
+				cards[i].classList.remove("hidden");
+				cards[i].classList.add("flex");
+				cards[i].classList.add("CardsAparece");
+				return;
 			}
-			if (i === 7) {
-				siguiente.classList.remove("hidden");
-				tequiero.classList.add("hidden");
-				quieres.classList.add("hidden");
+
+			if (i !== 0 && i < 9) {
+				i++;
+				console.log("continuacion = ", i);
+
+				cards[i - 1].classList.remove("flex");
+				cards[i - 1].classList.add("hidden");
+				cards[i].classList.remove("hidden");
+				cards[i].classList.add("flex");
+				cards[i].classList.add("CardsAparece");
 			}
 			if (i === 8) {
+				siguiente.classList.add("hidden");
+				quieres.classList.remove("hidden");
+			}
+			if (i === 9) {
+				i++;
+				console.log(i);
+				opciones.classList.remove("hidden");
+				opciones.classList.add("grid");
 				tequiero.classList.add("hidden");
-				opciones.classList.add("hidden");
-				opciones.classList.remove("grid");
+
+				siguiente.classList.add("hidden");
+				anterior.classList.add("hidden");
 			}
-			if(i===9){
-				tequiero.classList.remove("hidden");
+		});
+		anterior.addEventListener("click", () => {
+			if (i > 0 && i <= 10) {
+				i = i - 1;
+				console.log("anterior =", i);
+				cards[i + 1].classList.remove("flex");
+				cards[i + 1].classList.add("hidden");
+				cards[i].classList.remove("hidden");
+				cards[i].classList.add("flex");
+				cards[i].classList.add("CardsAparece");
+				for (let index = 0; index < quieres.classList.length; index++) {
+					const element = quieres.classList[index];
+					if (element === "flex") {
+					}
+				}
+				if (i === 0) {
+					anterior.classList.add("hidden");
+				}
+				if (i === 7) {
+					siguiente.classList.remove("hidden");
+					tequiero.classList.add("hidden");
+					quieres.classList.add("hidden");
+				}
+				if (i === 8) {
+					tequiero.classList.add("hidden");
+					opciones.classList.add("hidden");
+					opciones.classList.remove("grid");
+				}
+				if (i === 9) {
+					tequiero.classList.remove("hidden");
+				}
 			}
-		}
-		
+		});
+		quieres.addEventListener("click", () => {
+			cards[i].classList.add("hidden");
+			cards[i].classList.remove("flex");
+			i++;
+			quieres.classList.add("hidden");
+			console.log(i);
+			tequiero.classList.remove("hidden");
+			siguiente.classList.remove("hidden");
+		});
+		opcion1.addEventListener("click", () => {
+			opciones.classList.add("hidden");
+			opciones.classList.remove("grid");
+			modulOpcion1.classList.remove("hidden");
+			modulOpcion1.classList.add("flex");
+			volverInicio.classList.remove("hidden");
+			volverInicio.classList.add("flex");
+		});
+		opcion2.addEventListener("click", () => {
+			opciones.classList.add("hidden");
+			opciones.classList.remove("grid");
+			modulOpcion2.classList.remove("hidden");
+			modulOpcion2.classList.add("flex");
+			volverInicio.classList.remove("hidden");
+			volverInicio.classList.add("flex");
+		});
+		opcion3.addEventListener("click", () => {
+			opciones.classList.add("hidden");
+			opciones.classList.remove("grid");
+			modulOpcion3.classList.remove("hidden");
+			modulOpcion3.classList.add("flex");
+			volverInicio.classList.remove("hidden");
+			volverInicio.classList.add("flex");
+		});
 	});
-	quieres.addEventListener("click", () => {
-		cards[i].classList.add("hidden");
-		cards[i].classList.remove("flex");
-		i++;
-		quieres.classList.add("hidden");
-		console.log(i);
-		tequiero.classList.remove("hidden");
-		siguiente.classList.remove("hidden");
-	});
-	opcion1.addEventListener(('click'),()=>{
-		opciones.classList.add("hidden");
-		opciones.classList.remove("grid");
-		modulOpcion1.classList.remove('hidden')
-		modulOpcion1.classList.add('flex')
-		volverInicio.classList.remove('hidden')
-			volverInicio.classList.add('flex')
-	})
-	opcion2.addEventListener(('click'),()=>{
-		opciones.classList.add("hidden");
-		opciones.classList.remove("grid");
-		modulOpcion2.classList.remove('hidden')
-		modulOpcion2.classList.add('flex')
-		volverInicio.classList.remove('hidden')
-			volverInicio.classList.add('flex')
-	})
-	opcion3.addEventListener(('click'),()=>{
-		opciones.classList.add("hidden");
-		opciones.classList.remove("grid");
-		modulOpcion3.classList.remove('hidden')
-		modulOpcion3.classList.add('flex')
-		volverInicio.classList.remove('hidden')
-		volverInicio.classList.add('flex')
-	})
 </script>
