--- a/src/pages/Carta.astro
+++ b/src/pages/Carta.astro
@@ -27,6 +27,11 @@ import Layout from '../layouts/Layout.astro'
                 Nico
             </h3>
         </div>
+        <div class="*:p-10 w-[80%] bg-[#00000017] rounded-lg m-3">
+            <p>
+                Lo siento mucho por haberte hecho sentir con mis palabras de esa manera, estoy muy arrepentido y Te Quiero Demasiado para poder dejar esto así, eres muy especial para mi, haré todo por hacerte sentir bien y que veas que no volvere a repetir jamás lo sucedido, Tu Gatito que te extraña y adora mucho ❤️
+            </p>
+        </div>
         <button 
         class="p-2 bg-rose-400 text-white font-black rounded-lg"
         ><a href="/">VOLVER</a></button>
