--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ import Cards from "../components/Cards.astro";
 			<h2
 				class="text-center w-[300px] text-white p-2 bg-red-400 rounded-br-xl rounded-bl-xl shadow-lg shadow-red-500"
 			>
-				SIENDO SIMPLEMENTE NOSOTROS
+				SIENDO SIMPLEMENTE NOSOTROS!
 			</h2>
 		</div>
 		<Cards img="imgCumple.jpeg" nombre="CUMPLEAÑOS DE MI PRINCESA" />
